--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,3 +1,5 @@
+/* TODO - revise theme colors and alig with index.css */
+
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 
 :root {
